# golf-swing-recording--n6oxdk

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  backend.yml  ios.yml  web.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/: api.Dockerfile  chat.Dockerfile  coach.Dockerfile  payment.Dockerfile  user.Dockerfile  video.Dockerfile
infrastructure/scripts/: backup.sh  deploy.sh  monitoring.sh  scaling.sh
src/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
src/backend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  docker-compose.dev.yml  docker-compose.yml  jest.config.ts  lerna.json  nodemon.json  package.json  tsconfig.json
src/backend/video-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/video-service/src/: __init__.py  app.py  config.py
src/backend/video-service/src/controllers/: __init__.py  annotation_controller.py  video_controller.py
src/backend/video-service/src/models/: __init__.py  annotation.py  video.py
src/backend/video-service/src/repositories/: __init__.py  annotation_repository.py  video_repository.py
src/backend/video-service/src/services/: __init__.py  annotation_service.py  storage_service.py  video_processing_service.py
src/backend/video-service/src/utils/: __init__.py  logger.py  metrics.py  validators.py
src/backend/video-service/tests/: __init__.py  conftest.py  test_annotation_service.py  test_video_processing.py
src/ios/: .gitignore  README.md  swiftgen.yml  swiftlint.yml
src/web/: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  cypress.config.ts  jest.config.ts  next-env.d.ts  next.config.ts  package.json  (+3 more)
(+419 files in other folders)
